# duckdb_engine

./: .gitignore  .kodiak.toml  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  .whitesource  CHANGELOG.md  CODE_OF_CONDUCT.md  History.md  README.md  bleh.py  codecov.yml  conftest.py  noxfile.py  pyproject.toml  release-please-config.json  release.ps1  release.sh  renovate.json  test.cfg  tox.ini
.github/: release-please.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql-analysis.yml  publish.yaml  pythonapp.yaml  release-please.yml  scorecards.yml
.hypothesis/examples/6e868f2c5f0299d6/: 48f55ee7d8ef25fb  c7bc40202ace29e9
.hypothesis/examples/c1aa05d8becabd54/: 205724259db48fa1  239b0f0f85865ed9  50f1eb88e883b996
.hypothesis/examples/ed46a51e53d6ee40/: 5d4e55c7fe39a70d
docs/: conf.py  index.rst
duckdb_engine/: .isort.cfg  __init__.py  _supports.py  config.py  conftest.py  datatypes.py  secrets.py  sql_parsing.py
duckdb_engine/tests/: conftest.py  requirements.py  test_asyncio.py  test_basic.py  test_binary.py  test_datatypes.py  test_ducklake.py  test_graph.py  test_hypo.py  test_ibis.py  test_integration.py  test_lock.py  test_pandas.py  test_pyarrow.py  test_reflection.py  test_secrets.py  test_sqlalchemy.py  test_superset.py  test_versions.py  util.py
duckdb_engine/tests/snapshots/: snap_test_basic.py  snap_test_datatypes.py  snap_test_graph.py  snap_test_reflection.py
duckdb_engine/tests/snapshots/test_datatypes/test_interval/: schema.sql
scripts/: run_tests.py
sqlalchemy_tests/: requirements.py  test_sqlalchemy.py
