[project]
name = "duckdb_engine"
version = "0.17.0"
description = "SQLAlchemy driver for duckdb"
authors = [
    {name = "Elliana May", email = "me@mause.me"},
]
license = "MIT"
licence-files = ["LICENCE"]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "duckdb>=0.5.0",
    "sqlalchemy>=1.3.22",
    "packaging>=21",
]

[project.urls]
"Bug Tracker" = "https://github.com/Mause/duckdb_engine/issues"
Changelog = "https://github.com/Mause/duckdb_engine/releases"
repository = "https://github.com/Mause/duckdb_engine"

[tool.poetry.group.dev.dependencies]
numpy = "*"
pyarrow = "*"
pytest = "^8.0.0"
mypy = "^1.4"
hypothesis = "^6.75.2"
pandas = "^1"
jupysql = "^0.10.0"
sqlalchemy = {version="^1.3.19", extras=['mypy']}
pytest-cov = {extras = ["coverage"], version = "^5.0.0"}
pytest-remotedata = "^0.4.0"
pytest-snapshot = ">=0.9.0,<1"
toml = "^0.10.2"
fsspec = "^2025.2.0"

[tool.poetry.group.devtools.dependencies]
pdbpp = "^0.10.3"
pre-commit = { version = "^4.0.0", markers = "python_version >= '3.9'" }

[project.entry-points."sqlalchemy.dialects"]
duckdb = "duckdb_engine:Dialect"

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --strict --strict-markers"
xfail_strict = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ['E203', 'E501']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
