[project]
name = "duckdb_engine"
version = "0.17.0"
description = "SQLAlchemy driver for duckdb"
authors = [{ name = "Elliana May", email = "me@mause.me" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "duckdb>=0.5.0",
    "sqlalchemy==2.0.43",
    "packaging>=21",
]
license-files = ["LICENSE.txt"]

[project.urls]
"Bug Tracker" = "https://github.com/Mause/duckdb_engine/issues"
Changelog = "https://github.com/Mause/duckdb_engine/releases"
repository = "https://github.com/Mause/duckdb_engine"

[project.entry-points."sqlalchemy.dialects"]
duckdb = "duckdb_engine:Dialect"

[dependency-groups]
dev = [
    "numpy",
    "pyarrow",
    "pytest>=8.0.0,<9",
    "mypy~=1.4",
    "hypothesis>=6.75.2,<7",
    "pandas>=2.0",
    "jupysql>=0.10.0,<0.11",
    "sqlalchemy[mypy]==2.0.43",
    "pytest-cov>=5.0.0,<6",
    "pytest-remotedata>=0.4.0,<0.5",
    "pytest-snapshot>=0.9.0,<1",
    "toml>=0.10.2,<0.11",
    "fsspec>=2025.2.0,<2026",
]
devtools = [
    "pdbpp>=0.11.0,<0.12",
    "pre-commit>=4.0.0,<5 ; python_version >= '3.9'",
]

[tool.uv]
default-groups = [
    "dev",
    "devtools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --strict --strict-markers"
xfail_strict = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ['E203', 'E501']
